--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jmuxer": "^1.1.1",
     "jquery": "^3.3.1",
     "standard": "^12.0.1",
-    "wifi-control": "^2.0.1"
+    "wifi-control": "^2.0.1",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "electron": "^4.0.1",
